--- a/resource/Gemfile
+++ b/resource/Gemfile
@@ -30,10 +30,13 @@ gem 'bootsnap', '>= 1.1.0', require: false
 
 gem 'config'
 gem 'annotate'
+gem 'jsonapi-rails'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
+  gem 'pry-rails'
+  gem 'rb-readline'
 end
 
 group :development do
